Modify export directory display command in workflow
Updated the command to show export directories by finding the first directory matching '*web*'.

--- a/.github/workflows/CDCDTest.yml
+++ b/.github/workflows/CDCDTest.yml
@@ -69,8 +69,9 @@ jobs:
       uses: remarkablegames/setup-butler@v2
 
 
-    - name: Show export directories
-      run: echo ${{steps.export.outputs.build_directory}}
+    - name: Show export directories 
+      run: | 
+        echo $(find "${{steps.export.outputs.build_directory}}" -type d -name "*web*" | head -n 1)
       
       # https://itch.io/docs/butler/pushing.html
     - name: Upload to itch.io
