--- a/.github/workflows/CDCDTest.yml
+++ b/.github/workflows/CDCDTest.yml
@@ -64,6 +64,7 @@ jobs:
         godot_export_templates_download_url: https://downloads.godotengine.org/?version=${{ env.GODOT_VERSION }}&flavor=stable&slug=export_templates.tpz&platform=templates
         relative_project_path: ./
         archive_output: true
+        cache: true
 
     - name: Setup butler
       uses: remarkablegames/setup-butler@v2
@@ -77,7 +78,7 @@ jobs:
       
       # https://itch.io/docs/butler/pushing.html
     - name: Upload to itch
-      run: butler push ${{steps.find_web.web_folder}} ${{ env.ITCH_PROJECT }}:${{ env.ITCH_CHANEL }}
+      run: butler push /home/runner/.local/share/godot/builds/CICD-WebExport/ ${{ env.ITCH_PROJECT }}:${{ env.ITCH_CHANEL }}
       env:
         BUTLER_API_KEY: ${{ secrets.BUTLER_API_KEY }}
 
