--- a/.github/workflows/CDCDTest.yml
+++ b/.github/workflows/CDCDTest.yml
@@ -73,8 +73,16 @@ jobs:
     - name: Show export directories
       id: find_web
       run: | 
+        echo ${{steps.export.outputs.build_directory}}
+        folder=$(find "${{steps.export.outputs.build_directory}}" -type d -iname "*web*" | head -n 1) 
+        echo ${{ folder }}
+
+    - name: Set web export directory
+      id: web_export
+      run: |
         folder=$(find "${{steps.export.outputs.build_directory}}" -type d -iname "*web*" | head -n 1) 
         echo "web_folder=$folder" >> $GITHUB_OUTPUT
+      
       
       # https://itch.io/docs/butler/pushing.html
     - name: Upload to itch
